Restructured Event Detail Listing Layout.

--- a/src/components/pages/event-detail.twig
+++ b/src/components/pages/event-detail.twig
@@ -14,6 +14,9 @@
           {% for detail in event_details %}
             <dt>
               {% if detail.icon|length > 0 %}
+                <span class="icon">
+                  {{ source(detail.icon) }}
+                </span>
               {% else %}
                 <span class="icon-spec"></span>
               {% endif %}
