Correcting issue with kitchen sink blockquote component when no image was added, the quotation mark was too high on mobile, as well as when no author was present, the padding-bottom was too small (https://trello.com/c/zUANrR6G/79-quote-block)

--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -35,6 +35,12 @@
   @include media-breakpoint-up(xl) {
     padding: rem(60) rem(36) rem(90);
   }
+  &.iastate22-blockquote--no-author {
+    padding-bottom: rem(140);
+    @include media-breakpoint-up(xl) {
+      padding-bottom: rem(125);
+    }
+  }
 }
 
 .iastate22-blockquote__inner-wrap {
@@ -111,6 +117,12 @@
     @include media-breakpoint-up(xl) {
       top: rem(-9);
       margin-left: rem(-115);
+    }
+    .iastate22-blockquote--with-no-image & {
+      top: rem(-80);
+      @include media-breakpoint-up(xl) {
+        top: rem(-9);
+      }
     }
   }
   &:after {
