--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -296,10 +296,10 @@
       {% include "@external-news-story" with external_news_story %}
     </div>
     <div class="paragraph-widget paragraph-widget--blockquote">
-      {% include "@blockquote" with pull_quote_no_author %}
+      {% include "@blockquote" with pull_quote_with_author_with_image %}
     </div>
     <div class="paragraph-widget paragraph-widget--blockquote">
-      {% include "@blockquote" with pull_quote_with_author %}
+      {% include "@blockquote" with pull_quote_no_author_no_image %}
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
