Event text label font formatting

--- a/src/components/event-details/_event.scss
+++ b/src/components/event-details/_event.scss
@@ -104,3 +104,10 @@
     margin-bottom: 20px;
   }
 }
+
+.event-details__text-label {
+  font-size: rem(20);
+  line-height: rem(25);
+  color: $iastate-maroon;
+  font-weight: 700;
+}
