--- a/src/components/news-item/_news-item.scss
+++ b/src/components/news-item/_news-item.scss
@@ -31,7 +31,8 @@
         }
       }
     }
-    .news-item__article-title {
+    .news-item__article-title,
+    .news-item__article-title .iastate22-link-external {
       font-size: rem(22);
     }
   }
