Hero fixes on Profile view

--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -153,6 +153,10 @@
   }
 }
 
+.call-to-action__headline:after {
+  display: none;
+}
+
 .call-to-action__copy-wrap {
   .text-content {
     margin-bottom: rem(20);
