--- a/src/components/link-block/_link-block.scss
+++ b/src/components/link-block/_link-block.scss
@@ -5,10 +5,12 @@
 .link-block {
   background-color: $off-white;
   padding: rem(55) rem(39);
+
   @include media-breakpoint-up(md) {
     padding-left: rem(53);
     padding-right: rem(53);
   }
+
   @include media-breakpoint-up(lg) {
     padding: rem(60) rem(106);
   }
@@ -17,6 +19,10 @@
     padding-bottom: 0;
     @include media-breakpoint-up(lg) {
       width: 60%;
+    }
+
+    &:after {
+      display: none;
     }
   }
 
