--- a/src/components/news-item/news-item.twig
+++ b/src/components/news-item/news-item.twig
@@ -1,13 +1,17 @@
-<div class="news-item">
-  <div class="news-item__tags">
-    <ul>
-      {% for item in tags %}
-        <li> {{ item }} </li>
-      {% endfor %}
-    </ul>
+<div class="paragraph-widget paragraph-widget--news-items">
+  <div class="news-items__wrap">
+    <div class="news-item">
+      <div class="news-item__tags">
+        <ul>
+          {% for item in tags %}
+            <li> {{ item }} </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="news-item__article-title">
+        <a href="#" class="link-set__link iastate22-link-external">{{ article_title }}<span class="arrow"></span></a>
+      </div>
+      <p class="news-item__article-excerpt">{{ article_excerpt }}</p>
+    </div>
   </div>
-  <div class="news-item__article-title">
-    <a href="#" class="link-set__link iastate22-link-external">{{ article_title }}<span class="arrow"></span></a>
-  </div>
-  <p class="news-item__article-excerpt">{{ article_excerpt }}</p>
 </div>
