--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -86,7 +86,7 @@
 .fc .fc-event-time {
   color: $iastate-maroon;
   display: none;
-
+  color: $grey;
   @include media-breakpoint-up(lg) {
     display: inherit;
     font-weight: 400;
@@ -95,6 +95,8 @@
 
 .fc .fc-col-header-cell-cushion {
   padding: 0;
+  text-decoration: none;
+  text-decoration-color: transparent;
 }
 .fc {
   .fc-next-button,
@@ -339,6 +341,8 @@
   color: $iastate-red;
   font-size: rem(20);
   font-weight: 700;
+  text-decoration: none;
+  text-decoration-color: transparent;
   @include media-breakpoint-up(lg) {
     padding: 10px 15px;
   }
@@ -543,6 +547,14 @@
   line-height: rem(26);
   color: $grey;
   order: 0;
+
+  .event-listing__full-date {
+    color: $grey;
+  }
+
+  .event-listing__time {
+    color: $grey;
+  }
 }
 
 .event-listing__location {
@@ -550,7 +562,7 @@
 }
 
 .event-listing__desc {
-  color: $iastate-maroon;
+  color: $grey;
 }
 
 /*---===/ Month View \===---*/
