--- a/src/components/news-item/_news-item.scss
+++ b/src/components/news-item/_news-item.scss
@@ -42,7 +42,7 @@
   margin-top: 0;
   margin-bottom: 0;
 
-  + .paragraph-widget {
+  + .paragraph-widget--filter-form {
     margin-top: 0;
   }
 }
@@ -72,13 +72,9 @@
 
     > * {
       max-width: 1112px;
-      padding: 0 30px;
+      padding: 0;
       position: relative;
       z-index: 1;
-
-      @include media-breakpoint-up(xl) {
-        padding: 0 60px;
-      }
     }
   }
 }
