News and Event Style Fixes. Event JS Fixes.

--- a/src/components/pages/calendar.twig
+++ b/src/components/pages/calendar.twig
@@ -75,17 +75,15 @@ Month</button>
 Categories</label>
             <select name="event-categories" id="event-categories">
               <option value="">All Categories</option>
-              <option value="category_1">Category 1</option>
-              <option value="category_2">Category 2</option>
-              <option value="category_3">Category 3</option>
-              <option value="category_4">Category 4</option>
-              <option value="category_5">Category 5</option>
             </select>
           </div>
           <div class="calendar__categories-toggle">
             <input type="checkbox" name="featured-events" id="featured-events" class="visible-for-screen-readers">
             <label for="featured-events">Show only featured events</label>
           </div>
+        </div>
+        <div class="iastate22-form">
+            <button class="link-tertiary calendar-reset">Reset</button>
         </div>
       </header>
       <div class="calendar__wrap"></div>
