Staff Table layout fix/In the News link size normalized

--- a/src/components/news-item/_news-item.scss
+++ b/src/components/news-item/_news-item.scss
@@ -31,8 +31,7 @@
         }
       }
     }
-    .news-item__article-title,
-    .news-item__article-title .iastate22-link-external {
+    .news-item__article-title {
       font-size: rem(22);
     }
   }
