--- a/src/components/pages/_faculty-staff-directory.scss
+++ b/src/components/pages/_faculty-staff-directory.scss
@@ -100,6 +100,11 @@
     color: $iastate-maroon;
     font-size: rem(18);
     font-weight: 600;
+
+    &:hover,
+    &:focus {
+      color: $iastate-red;
+    }
   }
   &:before {
     content: "";
