Accessibility: Personal Profile Info Card, make contact header h2 under h1 person name

--- a/src/components/personal-profile-info-card/_personal-profile-info-card.scss
+++ b/src/components/personal-profile-info-card/_personal-profile-info-card.scss
@@ -93,6 +93,10 @@
     height: rem(8);
     position: absolute;
   }
+  h2 {
+    @extend %h3;
+    padding-bottom: 0;
+  }
   p {
     font-weight: 700;
     a {
