--- a/src/components/home-social/home-social--follow.twig
+++ b/src/components/home-social/home-social--follow.twig
@@ -23,7 +23,7 @@
       </li>
       <li>
         <a href="#" target="_blank">
-          <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
           <span class="visible-for-screen-readers">Twitter</span>
         </a>
       </li>
