Text alignment classes set up for WYSIWYG Integration. H2 underline modified.

--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -112,6 +112,18 @@ ol {
   }
 }
 
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
 // paragraph widgets
 .paragraph-widget {
   margin-top: rem(30);
