--- a/src/components/pages/event-detail.twig
+++ b/src/components/pages/event-detail.twig
@@ -14,9 +14,7 @@
           {% for detail in event_details %}
             <dt>
               {% if detail.icon|length > 0 %}
-                <span class="icon">
-                  {{ source(detail.icon) }}
-                </span>
+                <span class="icon">{{ detail.icon }}</span>
               {% else %}
                 <span class="icon-spec"></span>
               {% endif %}
