Event text wraps. Event titles forced to h4. Event Icons forced to Iowa State Red

--- a/src/components/event-details/_event.scss
+++ b/src/components/event-details/_event.scss
@@ -27,6 +27,10 @@
       display: block;
     }
 
+    .icon > svg path {
+      fill: $iastate-red;
+    }
+
     .icon-spec {
       background-color: $iastate-purple;
     }
