--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -52,6 +52,14 @@
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
+        <h2>Video Buttons</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--button-set">
+      {% include "@button-set--video" with button_set_video %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
         <h2>Heading 2 - This is a title of the next major section</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
       </div>
@@ -332,6 +340,22 @@
     </div>
     <div class="paragraph-widget paragraph-widget--card-set">
       {% include "@card-set" with card_set_three_links_no_images %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Video Cards</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set" with card_set_video %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Linked Image Video Cards</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--card-set">
+      {% include "@card-set--linked-image-video" with card_set_linked_image_video %}
     </div>
     <div class="paragraph-widget paragraph-widget--feature-with-large-image">
       {% include "@feature-with-large-image" with feature_with_large_image %}
