--- a/src/components/button-set/button-set.twig
+++ b/src/components/button-set/button-set.twig
@@ -2,7 +2,11 @@
   <ul>
     {% for item in items %}
       <li>
-        <a class="iastate22-button" href="{{ item.url }}">{{ item.text }}<span class="arrow"></span></a>
+        {% if item.url %}
+          <a class="iastate22-button" href="{{ item.url }}">{{ item.text }}<span class="arrow"></span></a>
+        {% elseif item.video %}
+            {% include "@button--video" with item.video %}
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
