--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,6 +30,7 @@
 @import "../components/button-set/button-set";
 @import "../components/link-secondary/link-secondary";
 @import "../components/link-tertiary/link-tertiary";
+@import "../components/link-video/link-video";
 @import "../components/link-set/link-set";
 @import "../components/link-block/link-block";
 @import "../components/breadcrumb/breadcrumb";
