Blockquote re-enabled

--- a/src/components/pages/video-modal-components.twig
+++ b/src/components/pages/video-modal-components.twig
@@ -23,14 +23,14 @@
     <div class="paragraph-widget paragraph-widget--callout-set">
       {% include "@feature-set--video" with callout_with_image_small_set %}
     </div>
-    {# <div class="paragraph-widget paragraph-widget--text-html">
+    <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
         <h2>Blockquote</h2>
       </div>
     </div>
     <div class="paragraph-widget paragraph-widget--blockquote">
       {% include "@blockquote--video" with pull_quote_with_author_with_image %}
-    </div> #}
+    </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
         <h2>Card Sets</h2>
