Bugfix - Video Modals now pause when closed

--- a/src/components/pages/Main University Site/home.twig
+++ b/src/components/pages/Main University Site/home.twig
@@ -59,9 +59,14 @@
     {% if home_blockquote.portrait %}
     <div class="iastate22-blockquote__portrait" data-micromodal-trigger="{{ home_blockquote.modal.id }}">
       <img src="{{ home_blockquote.portrait|path }}" alt="" loading="lazy" width="258" height="258">
-      <button class="video-embed__button">
+      {# <button class="video-embed__button">
         <svg viewBox = "0 0 83 83" preserveAspectRatio="xMidYMid meet" class="video-play-icon" xmlns="http://www.w3.org/2000/svg"><g class="outer-circle" fill="none" fill-rule="evenodd"><g opacity=".377" fill="#FFF" fill-rule="nonzero" transform="translate(1 1)"><circle cx="40" cy="40" r="40"/><path d="M40 0C17.909 0 0 17.909 0 40s17.909 40 40 40 40-17.909 40-40S62.091 0 40 0Zm0 1c21.54 0 39 17.46 39 39S61.54 79 40 79 1 61.54 1 40 18.46 1 40 1Z"/></g><path d="M24 22.818h35V57.93H24z"/><path class="arrow" d="m59.986 39.288-28.433-17.68c-2.073-1.363-3.767-.36-3.767 2.229V58.16c0 2.593 1.694 3.593 3.767 2.229l28.433-17.68c.565-.4.934-1.022 1.014-1.71a2.438 2.438 0 0 0-1.01-1.707l-.004-.004Z" fill="#FFF" fill-rule="nonzero"/></g></svg>
         <span class="visible-for-screen-readers">Play Video</span>
+      </button> #}
+      <button class="iastate22-blockquote__video-button video-embed__button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30.873" height="18" viewBox="0 0 30.873 18">
+          <path d="M-980.032,12916a2.129,2.129,0,0,1-1.968-2.249v-13.5a2.129,2.129,0,0,1,1.968-2.25h16.93a2.131,2.131,0,0,1,1.974,2.25v13.507A2.13,2.13,0,0,1-963.1,12916Zm27.316-2.1-6.412-2.162v-9.481l6.412-2.159a1.093,1.093,0,0,1,.451-.1,1.167,1.167,0,0,1,1.138,1.2v11.6a1.218,1.218,0,0,1-.541,1.021,1.1,1.1,0,0,1-.593.175A1.115,1.115,0,0,1-952.716,12913.9Z" transform="translate(982 -12898)" fill="#fff"/>
+        </svg>
       </button>
     </div>
     {% endif %}
@@ -83,7 +88,6 @@
     </div>
   </div>
 </div>
-
 <div class="home-academics">
   <div class="home-academics__copy-explore-wrap">
     <div class="home-academics__copy-wrap">
