--- a/src/components/pages/video-modal-components.twig
+++ b/src/components/pages/video-modal-components.twig
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="paragraph-widget paragraph-widget--callout-set">
-      {% include "@feature-set--video" with callout_with_image_small_set %}
+      {% include "@feature-set--video" %}
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
