Bugfix - Same as previous. It was on all of the video buttons

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -121,6 +121,11 @@
   background: transparent;
   border: none;
   cursor: pointer;
+
+  &:has(.icon-video) {
+    display: inline-flex;
+  }
+
   &:hover,
   &:focus-visible {
     color: $iastate-red;
