--- a/src/components/link-video/_link-video.scss
+++ b/src/components/link-video/_link-video.scss
@@ -1,6 +1,6 @@
 .link-video,
 .link-video--reverse {
-  display: inline-block;
+  display: inline-flex;
   appearance: none;
   margin: rem(10) 0;
   padding: 0;
